<resources>
    <string name="app_name">PixabayTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size">Size:</string>
    <string name="type">Type:</string>
    <string name="tags">Tags:</string>
    <string name="author">Author:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="or">OR</string>
    <string name="confirm_password">Confirm password</string>
    <string name="request_field">Required Field!</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="password_lenght">The password must be between 6 and 12 characters long</string>
    <string name="password_dont_match">Passwords don\'t match</string>
    <string name="retry">Retry</string>
    <string name="image">image</string>
    <string name="age">Age</string>
    <string name="age_not_number">Age must be a number</string>
    <string name="age_range">The age must be limited between 18 and 99 years old</string>
</resources>